v0.1.17 (2018-05-01)
- enable emby IP filtering
v0.1.16 (2018-04-20)
- fix: auto detect for pycrypto #49
- fix: Auto default quality #50
- fix: Python crypto not found #44
- fix for displaying accounts on scheduler
- sync with recent KODI fixes
v0.1.15 (2018-03-29)
- fixes for building STRM in non-catalog mode
v0.1.14 (2018-03-25)
- building STRM - enable creation of google transcode STRM
- building STRM - add transcode, original, skip 0p flags, add resolution append message
- fix check fo 0p resolution
- force http to be generated in STRM files if absent in host variable
- make a change to forking logic
v0.1.12 (2018-03-21)
- change emby strm file creation from [#p].strm to - #p.strm
- ensure all team drives are fetched (fix pagination)
- add missing delete method
v0.1.11 (2018-03-19)
- implement: Error in last release 0.1.10 #43
- fix for DBM fetching of change token (moved out of buildstrm method)
- resolve deadlock issue with scheduler updating change tracking numbers
- activate the scheduler
- fix gplayer .play missing error
- fix for default.py in STRM folder creation
v0.1.10 (2018-03-14)
- implement: select stream quality #17
- implement: Add support for specifying transcode type in URL #29
- fix preferred quality matching for transcoding
- add debug mode
v0.1.9 (2018-03-13)
- STRM cleanup
- fix for ensuring default host is used in STRM creation
- add scheduler log and server console logging options; redirect output to logging routine
- fix for enroll bug when accounts >= 10
- get rid of DBM for scheduler
- add STRM logging method (optional)
- add context items to team drive entries (treat them like folders)
- STRM building - add force parameter (to force overwrite)
- STRM building - add 'resolution' parameter to append resolution to STRM filename
- make correction for checking if STRM file exists already
- workaround issue - buildstrm folders not working #40
v0.1.8 (2018-02-21)
- implement: Support to SSL certificates (HTTPS) #39