@@ -1,3 +1,8 @@
+- add support to quality selection cookie
+- implemented: Using cookies to set preferred resolution #31
+- implemented: Add a feature to disable access unless authenticated in emby #41
+- add IPV6 support for emby IP filtering
+- adapt emby IP filtering for cloudflare support
 v0.1.17 (2018-05-01)
 - enable emby IP filtering
 v0.1.16 (2018-04-20)
